--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.8.0
   intl_phone_field: ^3.2.0
+  image_picker: ^1.1.2
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +63,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
     - assets/images/1.jpg
+    - assets/images/2.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
